# cargo-component-v0.7-no-std-repr

./: Cargo.toml  README.md  debug.wat
src/: bindings.rs  lib.rs
wit/: world.wit
