[package]
name = "test-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:test-lib"

[package.metadata.component.dependencies]
